[package]
name = "ipset"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A wrapper for libipset"
repository = "https://github.com/lazytiger/ipset"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
derive_more = "0.99"
