[package]
name = "ipset"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "A wrapper for libipset"
repository = "https://github.com/lazytiger/ipset"
links = "ipset"

[dependencies]
libc = "0.2"
derive_more = { version = "1.0", features = ["from", "display", "into"] }
ipset_derive = "0.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.70"
