[package]
name = "ipset_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A deriver for libipset"
repository = "https://github.com/lazytiger/ipset"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
